--- a/app/src/main/res/layout/dialog_fragment_shift.xml
+++ b/app/src/main/res/layout/dialog_fragment_shift.xml
@@ -8,37 +8,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-        <EditText
-            android:id="@+id/shift_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/shift_start"
-            android:inputType="time"
-            android:layout_marginHorizontal="5dp"/>
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/shift_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="~"/>
+            android:text="シフト登録"/>
 
-        <EditText
-            android:id="@+id/shift_end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="@string/shift_end"
-            android:inputType="time"
-            android:layout_marginHorizontal="5dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
+            <EditText
+                android:id="@+id/shift_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:hint="@string/shift_start"
+                android:inputType="time"
+                android:focusable="false"
+                android:minHeight="48dp"
+                android:textColorHint="#757575"
+                android:autofillHints="" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/from_to" />
+
+            <EditText
+                android:id="@+id/shift_end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:hint="@string/shift_end"
+                android:inputType="time"
+                android:focusable="false"
+                android:minHeight="48dp"
+                android:textColorHint="#757575"
+                android:autofillHints="" />
+
+        </LinearLayout>
     </LinearLayout>
 
 
